deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-guide-d
  labels:
    app: fitness-guide
spec:
  replicas: 0
  selector:
    matchLabels:
      app: app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: add5/fitness:latest
          ports:
            - containerPort: 80
