service.yml
apiVersion: v1
kind: Service
metadata:
  name: fitness-guide-service
spec:
  selector:
    app: fitness-guide 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
